--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^1.3.4",
     "core-js": "^3.8.3",
     "vue": "^2.6.14",
     "vue-icon": "^2.3.0",
     "vue-router": "^3.5.1",
+    "vue-toastify": "^1.8.1",
     "vuex": "^3.6.2"
   },
   "devDependencies": {
@@ -54,6 +56,15 @@
       "parser": "@babel/eslint-parser"
     },
     "rules": {
+      "at-rule-no-unknown": [
+        true,
+        {
+          "ignoreAtRules": [
+            "extends",
+            "tailwind"
+          ]
+        }
+      ],
       "prettier/prettier": [
         "error",
         {
